# agentic_demo

./: .clinerules  .gitignore  README.md  projectBrief.md  pyproject.toml
data/: fa_18c.txt
specs/: loader.feature  server.feature
src/: main.py
