[project]
name = "agentic-demo"
version = "0.1.0"
description = "MCP RAG Server for Warplane Information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "mcp>=1.6.0",
    "openai>=1.69.0",
]

[project.optional-dependencies]
dev = [

]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
