
[project]
name = "warplanes-rag"
version = "0.1.0"
description = "A Python MCP RAG server for information on modern warplanes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Warplanes RAG Team" },
]
dependencies = [

]

[project.optional-dependencies]
dev = [

]
